# repo-audit-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_audit/: __init__.py  __main__.py  analyzer.py  cli.py  reporting.py
tests/: test_analyzer.py
