[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-audit"
version = "0.1.0"
description = "Audit a repository for baseline engineering hygiene signals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mehmet Ali Sahin" }
]
keywords = ["github", "repository", "audit", "cli", "quality"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]

[project.scripts]
repo-audit = "repo_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
